Fixed a bug causing incorrect warning messages to be shown Fixed a bug causing status in the progress bar to be incorrectly wrapped

--- a/css/surfmap.css
+++ b/css/surfmap.css
@@ -133,6 +133,6 @@ color:#FF192A;
 }
 
 .panelSectionContent {
-font-size: 9pt;
+font-size: 8pt;
 margin-left:10px;
 }
